--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,15 @@ body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  background-color: #fff;
-  color: #222;
+  background-color: #f7f7fe;
+  color: #6e728e;
 }
-
+Montserrat - 700
 .container {
   max-width: 100%;
-  width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  width: 1100px;
+  padding-left: 25px;
+  padding-right: 25px;
   margin-left: auto;
   margin-right: auto;
 }
