--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ img {
   padding-top: 55px;
   padding-bottom: 55px;
   border-radius: 10px;
-  background: linear-gradient(135deg, #A2A7F0 0%, #696EDD 100%);
+  background-image: linear-gradient(135deg, #A2A7F0 0%, #696EDD 100%);
   box-shadow: 0px 20px 40px 0px rgba(212, 210, 244, 0.50);
 }
 
