--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,17 @@ html {
   box-sizing: inherit;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 body {
   height: 100%;
   display: flex;
@@ -26,6 +37,11 @@ body {
   font-size: 16px;
   background-color: #f7f7fe;
   color: var(--text-color);
+  background-image: url(../img/page-right-bg.svg),
+    url(../img/page-left-bg.svg);
+  background-position: top -103px right -103px,
+    left -120px bottom -460px;
+  background-repeat: no-repeat;
 }
 
 .container {
@@ -59,6 +75,73 @@ img {
   font-size: 32px;
   font-family: Montserrat;
   font-weight: 700;
+}
+
+.pricing-switch {
+  margin-bottom: 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.switch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.switch-label {
+  font-style: 15px;
+  line-height: 28px;
+  color: rgba(110, 114, 142, 0.5);
+  cursor: pointer;
+}
+
+.switch-control {
+  position: relative;
+  width: 56px;
+  height: 32px;
+  border-radius: 16px;
+  margin-left: 24px;
+  margin-right: 24px;
+  background-image: linear-gradient(rgba(162, 167, 240, 1), rgba(105, 110, 221, 1));
+  padding: 4px;
+}
+
+.switch-control-annually,
+.switch-control-monthly {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.switch-input-annually:checked ~ .switch-control .switch-control-monthly,
+.switch-input-monthly:checked ~ .switch-control .switch-control-annually {
+  z-index: 5;
+}
+
+.switch-input-annually:checked ~ .switch-label-annually,
+.switch-input-monthly:checked ~ .switch-label-monthly {
+  color: rgb(110, 114, 142)
+}
+
+.switch-input-monthly:checked ~ .switch-control .switch-circle {
+  margin-left: 24px;
+}
+
+.switch-circle {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: margin 0.4s ease;
+}
+
+.switch-label:hover {
+  color: rgb(110, 114, 142)
 }
 
 .pricing-toggler-info {
