update plan prices on change

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ img {
   letter-spacing: -2.16px;
 }
 
-.content-heading span {
+.content-heading-dollor {
   margin-right: 8px;
   font-size: 40px;
   letter-spacing: -1.2px;
